* bugfix for actionButtons in UserManager2 (fixed hiding and displaying of buttons and some styling issues, dojo.style(dojo.byId("saveEditedUser"),"display","none") does not work if the srcNode is wrapped into a new structure where the node with the id is not the outermost item)

--- a/plugins/userManager/userManager.less
+++ b/plugins/userManager/userManager.less
@@ -1,6 +1,5 @@
 @import url("../../resources/css/base.less");
 
-
 .userManager {
   position: relative;
 
@@ -21,6 +20,9 @@
     background: #e3e3e3;
   }
 
+  .actionButtons .dijitButton {
+    float:left;
+  }
 }
 
 .hint {
